# task_tracker

./: .gitignore  TODO.md  cli.py  cli_test.py  pyproject.toml
build_tools/: build.bat
docs/: time_tracker_idea.txt
images/: Timer.xcf
src/task_tracker/: __init__.py  __main__.py  database.py  helpers.py
src/task_tracker/gui/: __init__.py  main_window.py  windows.py
